infra/kubernetes/apps/core-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: banking-system
spec:
  selector:
    app: core-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
