infra/kubernetes/apps/core-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  namespace: banking-system
spec:
  rules:
    - host: iate.space
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8080
